<resources>
    <string name="character_image">character image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="origin">Origin</string>
    <string name="specie">Specie</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="created">Created</string>
</resources>